chore(mcProductService): set java 17 for sonarqube build in maven.yml